data/derived/sp14/progs/unify/prog2056.ml.out
Characters 75-78:
  | Sine e1 -> (sin*pi(eval (e1, x, y)))
                ^^^
Error: This expression has type float -> float
       but an expression was expected of type int
